[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/creatures/abstract_enemy/AbstractEnemy.gd" type="Script" id=2]
[ext_resource path="res://addons/behavior_tree/src/blackboard.gd" type="Script" id=6]

[node name="AbstractEnemy" type="KinematicBody"]
script = ExtResource( 2 )

[node name="LineOfSightRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.055, -0.05 )
cast_to = Vector3( 0, 0, -1 )
debug_shape_custom_color = Color( 1, 0, 0, 1 )
debug_shape_thickness = 1

[node name="Blackboard" type="Node" parent="."]
script = ExtResource( 6 )

[node name="RecalculateCurrentPathTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="ChasingTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="RecalculateCurrentPathTimer" to="." method="_on_RecalculateCurrentPathTimer_timeout"]
[connection signal="timeout" from="ChasingTimer" to="." method="_on_ChasingTimer_timeout"]
